==> AntoineMugnier/mutekh/arch/nrf51/drivers/gpio.c <==
#include <hexo/types.h>
#include <hexo/endian.h>
#include <hexo/iospace.h>
#include <mutek/mem_alloc.h>
#include <arch/nrf51/gpio.h>
#include <arch/nrf51/gpiote.h>
#include <arch/nrf51/timer.h>
#include <arch/nrf51/ppi.h>
#include <arch/ppi.h>
#include <device/resources.h>
#include <device/device.h>
#include <device/irq.h>
#include <device/class/gpio.h>
#include <device/class/icu.h>
#include <device/class/pwm.h>
#include <device/class/iomux.h>
#include <mutek/printk.h>
#include <string.h>
#define dprintk(...) do{}while(0)
#define GPIO_ADDR ((uintptr_t)0x50000000)
#define GPIO_COUNT 31
#define GPIOTE_ADDR NRF_PERIPHERAL_ADDR(NRF51_GPIOTE)
#define GPIOTE_COUNT 4
#define PWM_COUNT 3
#define OVERFLOW 4

static DEV_GPIO_SET_MODE(nrf51_gpio_set_mode)
{
  struct device_s *dev = gpio->dev;
  struct nrf51_gpio_private_s *pv = dev->drv_pv;
  uint32_t nrf_mode;

  if (io_last > GPIO_COUNT)
    return -ERANGE;

  if (nrf51_gpio_mode(mode, &nrf_mode))
    return -ENOTSUP;

  uint32_t m = (endian_le32_na_load(mask) << io_first)
    & ((1 << (io_last + 1)) - ((1 << io_first)));

  LOCK_SPIN_IRQ(&dev->lock);

  for (uint8_t pin = io_first; pin <= io_last; ++pin) {
    if (!((m >> pin) & 1))
      continue;

    dprintk("%s %d %x\n", __FUNCTION__, pin, nrf_mode);

    nrf_reg_set(GPIO_ADDR, NRF51_GPIO_PIN_CNF(pin), nrf_mode);
  }

#if defined(CONFIG_DRIVER_NRF51_GPIO_INPUT_RANGE)
  if (pv->range_mask)
    nrf51_gpio_input_range_update(dev, m & pv->range_mask);
#endif

  LOCK_RELEASE_IRQ(&dev->lock);

  return 0;
}

static DEV_GPIO_SET_OUTPUT(nrf51_gpio_set_output)
{
  struct device_s *dev = gpio->dev;

  if (io_last > GPIO_COUNT)
    return -ERANGE;

  if (io_first > GPIO_COUNT)
    return -ERANGE;

  uint32_t mask = (1 << (io_last + 1)) - (1 << io_first);
  uint32_t setm = (endian_le32_na_load(set_mask) << io_first) & mask;
  uint32_t clearm = (endian_le32_na_load(clear_mask) << io_first) | ~mask;

  LOCK_SPIN_IRQ(&dev->lock);

  uint32_t out = nrf_reg_get(GPIO_ADDR, NRF51_GPIO_OUT);
  uint32_t next = setm ^ (out & (setm ^ clearm));

  dprintk("%s %d-%d clr %08x set %08x %08x -> %08x\n",
         __FUNCTION__, io_first, io_last, clearm, setm,
         out, next);

  nrf_reg_set(GPIO_ADDR, NRF51_GPIO_OUT, next);

  LOCK_RELEASE_IRQ(&dev->lock);

  return 0;
}

static DEV_GPIO_GET_INPUT(nrf51_gpio_get_input)
{
  struct device_s *dev = gpio->dev;

  if (io_last > GPIO_COUNT)
    return -ERANGE;

  LOCK_SPIN_IRQ(&dev->lock);

  uint32_t mask = (1 << (io_last - io_first + 1)) - 1;
  uint32_t in = nrf_reg_get(GPIO_ADDR, NRF51_GPIO_IN) >> io_first;
  endian_le32_na_store(data, in & mask);

  LOCK_RELEASE_IRQ(&dev->lock);

  return 0;
}

static DEV_ICU_GET_ENDPOINT(nrf51_gpio_icu_get_endpoint)
{
  struct device_s *dev = accessor->dev;
  struct nrf51_gpio_private_s *pv = dev->drv_pv;

  switch (type) {
  case DEV_IRQ_EP_SINK:
#if defined(CONFIG_DRIVER_NRF51_GPIO_INPUT_RANGE)
    if (id == NRF51_GPIO_RANGE_IRQ_ID)
      return &pv->range_irq_out;
#endif

    if (id >= GPIO_COUNT)
        return NULL;

    int8_t i = gpiote_allocate(pv, id);
    if (i >= 0)
      return pv->irq_out + i;

    return NULL;

  case DEV_IRQ_EP_SOURCE:
    if (id < 1)
      return pv->irq_in;
    break;

  case DEV_IRQ_EP_BYPASS:
    return NULL;
  }

  return NULL;
}

static DEV_ICU_ENABLE_IRQ(nrf51_gpio_icu_enable_irq)
{
  struct device_s *dev = accessor->dev;
  struct nrf51_gpio_private_s *pv = dev->drv_pv;

#if defined(CONFIG_DRIVER_NRF51_GPIO_INPUT_RANGE)
  if (sink == &pv->range_irq_out) {
    nrf_it_enable(GPIOTE_ADDR, NRF51_GPIOTE_PORT);
    return 1;
  }
#endif

  uint_fast8_t sense = src->sense & sink->sense;
  uint_fast8_t te = sink - pv->irq_out;
  uint8_t pin = pv->gpiote_pin[te];

  if (te >= GPIOTE_COUNT)
    return -EINVAL;

  if (pin >= GPIO_COUNT || pin < 0)
    return -EINVAL;

  for (uint8_t i = 0; i < GPIOTE_COUNT; ++i) {
    if (pv->gpiote_pin[i] == pin && i != te) {
      return -EBUSY;
    }
  }

  if (!sense)
    return -EINVAL;

  bool_t up = !!(sense & (DEV_IRQ_SENSE_HIGH_LEVEL
                          | DEV_IRQ_SENSE_RISING_EDGE
                          | DEV_IRQ_SENSE_ASYNC_RISING_EDGE));
  bool_t down = !!(sense & (DEV_IRQ_SENSE_LOW_LEVEL
                            | DEV_IRQ_SENSE_FALLING_EDGE
                            | DEV_IRQ_SENSE_ASYNC_FALLING_EDGE));

  if (up == down)
    return -ENOTSUP;

  uint32_t te_config = NRF51_GPIOTE_CONFIG_MODE_EVENT
    | NRF51_GPIOTE_CONFIG_PSEL(pin);
  uint32_t pin_config = 0
    | NRF51_GPIO_PIN_CNF_DIR_INPUT
    | NRF51_GPIO_PIN_CNF_INPUT_DISCONNECT;

  if (up) {
    te_config |= NRF51_GPIOTE_CONFIG_POLARITY_LOTOHI;
    pin_config |= NRF51_GPIO_PIN_CNF_PULL_DOWN;
  } else {
    te_config |= NRF51_GPIOTE_CONFIG_POLARITY_HITOLO;
    pin_config |= NRF51_GPIO_PIN_CNF_PULL_UP;
  }

  nrf_reg_set(GPIO_ADDR, NRF51_GPIO_PIN_CNF(pin), pin_config);
  nrf_reg_set(GPIOTE_ADDR, NRF51_GPIOTE_CONFIG(te), te_config);
  nrf_it_enable(GPIOTE_ADDR, NRF51_GPIOTE_IN(te));

  return 1;
}

static DEV_ICU_DISABLE_IRQ(nrf51_gpio_icu_disable_irq)
{
  struct nrf51_gpio_private_s *pv = accessor->dev->drv_pv;
  uint_fast8_t te = sink - pv->irq_out;
  uint8_t pin = pv->gpiote_pin[te];

#if defined(CONFIG_DRIVER_NRF51_GPIO_INPUT_RANGE)
  if (sink == &pv->range_irq_out) {
    nrf_it_disable(GPIOTE_ADDR, NRF51_GPIOTE_PORT);
    return;
  }
#endif

  nrf_reg_set(GPIO_ADDR, NRF51_GPIO_PIN_CNF(pin), 0x0);
  nrf_it_disable(GPIOTE_ADDR, NRF51_GPIOTE_IN(te));
  nrf_reg_set(GPIOTE_ADDR, NRF51_GPIOTE_CONFIG(te), NRF51_GPIOTE_CONFIG_MODE_DISABLED);
  pv->gpiote_pin[te] = -1;
}

static DEV_IRQ_EP_PROCESS(nrf51_gpio_process)
{
  struct nrf51_gpio_private_s *pv = ep->dev->drv_pv;
  bool_t evented = 1;

  while (evented) {
    evented = 0;

    for (int8_t te = 0; te < GPIOTE_COUNT; ++te) {
      if (!nrf_event_check(GPIOTE_ADDR, NRF51_GPIOTE_IN(te)))
        continue;

      nrf_event_clear(GPIOTE_ADDR, NRF51_GPIOTE_IN(te));

      struct dev_irq_ep_s *sink = pv->irq_out + te;
      sink->process(sink, 0);
      evented = 1;
    }

#if defined(CONFIG_DRIVER_NRF51_GPIO_INPUT_RANGE)
    if (nrf_event_check(GPIOTE_ADDR, NRF51_GPIOTE_PORT)) {
      nrf_event_clear(GPIOTE_ADDR, NRF51_GPIOTE_PORT);
      dprintk("%s port %08x %d\n", __FUNCTION__, pv->range_mask, pv->range_mode);

      nrf51_gpio_input_range_update(ep->dev, pv->range_mask);

      pv->range_irq_out.process(&pv->range_irq_out, 0);

      evented = 1;
    }
#endif
  }
}

static DEV_IOMUX_SETUP(nrf51_gpio_iomux_setup)
{
  if (io_id >= GPIO_COUNT)
    return -ERANGE;

  uint32_t nrf_mode;
  if (nrf51_gpio_mode(dir, &nrf_mode))
    return -ENOTSUP;

  nrf_reg_set(GPIO_ADDR, NRF51_GPIO_PIN_CNF(io_id), nrf_mode);

  return 0;
}

static DEV_INIT(nrf51_gpio_init)
{
  struct nrf51_gpio_private_s *pv;

  dev->status = DEVICE_DRIVER_INIT_FAILED;

  __unused__ uintptr_t addr = 0;
  assert(!device_res_get_uint(dev, DEV_RES_MEM, 0, &addr, NULL) && GPIO_ADDR == addr);

#if defined(CONFIG_DRIVER_NRF51_GPIO_ICU) || defined(CONFIG_DRIVER_NRF51_GPIO_PWM)
  pv = mem_alloc(sizeof(*pv), mem_scope_sys);

  if (!pv)
    return -ENOMEM;

  memset(pv, 0, sizeof(*pv));

  dev->drv_pv = pv;

  assert(!device_res_get_uint(dev, DEV_RES_MEM, 1, &addr, NULL) && GPIOTE_ADDR == addr);

  nrf_reg_set(GPIOTE_ADDR, NRF51_GPIOTE_POWER, 0);
  for (uint16_t i = 0; i < 32; ++i)
    asm volatile("");

  nrf_reg_set(GPIOTE_ADDR, NRF51_GPIOTE_POWER, 1);
  for (uint16_t i = 0; i < 32; ++i)
    asm volatile("");

  for (int8_t i = 0; i < GPIOTE_COUNT; ++i) {
    nrf_it_disable(GPIOTE_ADDR, NRF51_GPIOTE_IN(i));
    nrf_reg_set(GPIOTE_ADDR, NRF51_GPIOTE_CONFIG(i),
                NRF51_GPIOTE_CONFIG_MODE_DISABLED);
    pv->gpiote_pin[i] = -1;
  }
#endif



#if defined(CONFIG_DRIVER_NRF51_GPIO_PWM)
  for (uint8_t i = 0; i < PWM_COUNT; ++i) {
    nrf51_ppi_alloc(pv->pwm[i].ppi, 2);

    nrf51_ppi_setup(NRF51_PPI_ADDR, pv->pwm[i].ppi[0],
                    pv->pwm_timer_addr, NRF51_TIMER_COMPARE(OVERFLOW),
                    GPIOTE_ADDR, 1);

    nrf51_ppi_setup(NRF51_PPI_ADDR, pv->pwm[i].ppi[0],
                    pv->pwm_timer_addr, NRF51_TIMER_COMPARE(OVERFLOW),
                    GPIOTE_ADDR, 1);
  }
#endif

#if defined(CONFIG_DRIVER_NRF51_GPIO_ICU)
  device_irq_source_init(dev, pv->irq_in, 1,
                         &nrf51_gpio_process,
                         DEV_IRQ_SENSE_HIGH_LEVEL);

  if (device_irq_source_link(dev, pv->irq_in, 1, -1))
    goto err_mem;

  device_irq_sink_init(dev, pv->irq_out,
                       GPIOTE_COUNT,
                       DEV_IRQ_SENSE_HIGH_LEVEL
                       | DEV_IRQ_SENSE_LOW_LEVEL
                       | DEV_IRQ_SENSE_RISING_EDGE
                       | DEV_IRQ_SENSE_FALLING_EDGE);

# if defined(CONFIG_DRIVER_NRF51_GPIO_INPUT_RANGE)
  device_irq_sink_init(dev, &pv->range_irq_out, 1, DEV_IRQ_SENSE_ANY_EDGE);
# endif
#endif

  for (uint8_t pin = 0; pin <= 31; ++pin)
    nrf_reg_set(GPIO_ADDR, NRF51_GPIO_PIN_CNF(pin), 0
                | NRF51_GPIO_PIN_CNF_DIR_INPUT
                | NRF51_GPIO_PIN_CNF_INPUT_DISCONNECT);

  dev->drv = &nrf51_gpio_drv;
  dev->status = DEVICE_DRIVER_INIT_DONE;
  return 0;

 err_mem:
  mem_free(pv);
  return -1;
}

static DEV_CLEANUP(nrf51_gpio_cleanup)
{
#if defined(CONFIG_DRIVER_NRF51_GPIO_ICU)
  struct nrf51_gpio_private_s  *pv = dev->drv_pv;

  for (int8_t i = 0; i < GPIOTE_COUNT; ++i)
    nrf_it_disable(GPIOTE_ADDR, NRF51_GPIOTE_IN(i));

  device_irq_source_unlink(dev, pv->irq_in, 1);

  device_irq_sink_unlink(dev, pv->irq_out,
                         GPIOTE_COUNT);

# if defined(CONFIG_DRIVER_NRF51_GPIO_PWM)
  for (uint8_t i = 0; i < PWM_COUNT; ++i)
    nrf51_ppi_free(pv->pwm[i].ppi, 2);
# endif

# if defined(CONFIG_DRIVER_NRF51_GPIO_INPUT_RANGE)
  device_irq_sink_unlink(dev, &pv->range_irq_out, 1);
# endif
#endif

#if defined(CONFIG_DRIVER_NRF51_GPIO_ICU) || defined(CONFIG_DRIVER_NRF51_GPIO_PWM)
  mem_free(pv);
#endif
}
